--- a/templates/home.html
+++ b/templates/home.html
@@ -13,14 +13,21 @@
 
 
 <br>
+
+<table class="table table-dark table-hover">
+<tbody>
 {% for i in ensaios_registrados %}
-<div class="container bg-secondary">
-    {{ i.nome }}
-    <a href="/dosagem/{{ i.id }}" class='btn btn-secondary'>Dosagem</a>
-    <a href="/editar_ensaio/{{ i.id }}" class='btn btn-secondary'>Editar Parametros</a>
-    <a href="/home/{{ i.id }}" class="btn btn-danger btn-sm">DELETAR</a></td>
-</div>
+<tr>
+    <td>{{ i }}</td>
+    <td><a href="/dosagem/{{ i.id }}" class='btn btn-secondary btn-sm'>Dosagem</a></td>
+    <td><a href="/editar_ensaio/{{ i.id }}" class='btn btn-secondary btn-sm'>Editar</a></td>
+    <td><a href="/home/{{ i.id }}" class="btn btn-danger btn-sm">DELETAR</a></td>
+</tr>
 {% endfor %}
+</tbody>
+</table>
+
+
 
 
 {% endblock %}
