--- a/templates/resultados.html
+++ b/templates/resultados.html
@@ -13,11 +13,7 @@
         
         <br>
 
-        <form method="POST">
-            {{ form.hidden_tag() }}
-            {{ form.alfa.label }}<br>
-            {{ form.alfa(size=3) }}{{ form.submit(class="btn btn-secondary") }}
-        </form>
+
 
         </div>
 
@@ -26,7 +22,7 @@
 
             <ul class="nav nav-tabs">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/dosagem/{{ id }}">Piloto</a>
+                <a class="nav-link" aria-current="page" href="/dosagem/{{ id }}">Piloto</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/auxiliar/{{ id }}">Auxiliar</a>
@@ -35,10 +31,11 @@
                 <a class="nav-link" href="/corpo_de_prova/{{ id }}">Corpo de Prova</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/resultados/{{ id }}">Resultados</a>
+                <a class="nav-link active" href="/resultados/{{ id }}">Resultados</a>
               </li>
             </ul>
         <br>
+
         <h4>Traço PILOTO<br>m: {{ m }}<br>Slump: {{ slump }} mm</h4>
 
 
@@ -62,32 +59,6 @@
                 <th>Areia</th>
             </tr>
         </thead>
-        <tbody>
-        {% for i in dosagens_do_ensaio_salvo %}
-        <form method="POST" action="/agua">
-        <tr>
-            <td>{{ i.alfa }}</td>
-            <td>{{ i.c_unitario }}</td>
-            <td>{{ i.a_unitario }}</td>
-            <td>{{ i.b_unitario }}</td>
-            
-            <td>{{ i.c_massa }}</td>
-            <td>{{ i.a_massa }}</td>
-            <td>{{ i.b_massa }}</td>
-            
-            <td>{{ i.c_acr }}</td>
-            <td>{{ i.a_acr }}</td>
-
-            <td><input type="hidden" value="{{ i.id }}" name="i_id">
-            <input type="text" size="3" class="form-control-sm" value="{{ i.agua }}" name="valor_agua_novo"></td>
-            <td><input type="submit" value="Update"></td>
-            <td><a href="/dosagem/delete/{{ i.id }}" class="btn btn-danger btn-sm">DELETAR</a></td>
-            </form>
-        </tr>
-        {% endfor %}
-        </tbody>
-
-
         </table>
         </div>
     </div>
