--- a/templates/dosagem.html
+++ b/templates/dosagem.html
@@ -47,8 +47,9 @@
             <tr>
                 <th rowspan="2" class = "align-middle">Alfa</th>
                 <th colspan="3">Traço unitário</th>
-                <th colspan="3">Consumo de materiais</th>
+                <th colspan="4">Consumo de materiais</th>
                 <th colspan="2">Acréscimos</th>
+                <th rowspan="2">Agua do agregado</th>
                 <th rowspan="2">Consumo de água para atingir o abatimento (kg)</th>
                 <th rowspan="2"></th>
                 <th rowspan="2"></th><tr>
@@ -56,7 +57,8 @@
                 <th>Areia</th>
                 <th>Brita</th>
                 <th>Cimento</th>
-                <th>Areia</th>
+                <th>Areia seca</th>
+                <th>Areia úmida</th>
                 <th>Brita</th>
                 <th>Cimento</th>
                 <th>Areia</th>
@@ -73,10 +75,12 @@
             
             <td>{{ i.c_massa }}</td>
             <td>{{ i.a_massa }}</td>
+            <td>umida</td>
             <td>{{ i.b_massa }}</td>
             
             <td>{{ i.c_acr }}</td>
             <td>{{ i.a_acr }}</td>
+            <td>agua</td>
 
             <td><input type="hidden" value="{{ i.id }}" name="i_id">
             <input type="text" size="3" class="form-control-sm" value="{{ i.agua }}" name="valor_agua_novo"></td>
