--- a/templates/auxiliar.html
+++ b/templates/auxiliar.html
@@ -62,7 +62,7 @@
 
 
         <tbody>
-        {% for i in dosagens_do_ensaio_salvo_rico %}
+        {% for i in ensaio_salvo.dosagem_rico %}
         <form method="POST" action="/agua">
         <tr>
             <td>{{ i.alfa }}</td>
@@ -108,7 +108,7 @@
 
 
         <tbody>
-        {% for i in dosagens_do_ensaio_salvo_pobre %}
+        {% for i in ensaio_salvo.dosagem_pobre %}
         <form method="POST" action="/agua">
         <tr>
             <td>{{ i.alfa }}</td>
